# myls

./: CMakeLists.txt  FileResolver.cpp  FileResolver.h  Printer.cpp  Printer.h  Sort.cpp  Sort.h  SortAlgorithms.cpp  SortAlgorithms.h  Sorter.cpp  Sorter.h  Typedefs.h  UserChoise.cpp  UserChoise.h  main.cpp
